// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableTransactions should render table with list of transactions 1`] = `
<div
  className="table-transactions"
>
  <div
    className="table-transactions__tabs"
  >
    <div
      className="tab-in-out"
    >
      <button
        className="tab-in-out__tab tab-in-out__tab--in-actived"
        id="tab-in"
        onClick={[Function]}
        type="button"
      >
        In
      </button>
      <button
        className="tab-in-out__tab"
        id="tab-out"
        onClick={[Function]}
        type="button"
      >
        Out
      </button>
    </div>
    <div
      className="tab-months"
    >
      <button
        className="tab-months__navigation"
        onClick={[Function]}
        type="button"
      >
        December 18
      </button>
      <span
        className="tab-months__current"
      >
        January 19
      </span>
      <button
        className="tab-months__navigation"
        onClick={[Function]}
        type="button"
      >
        February 19
      </button>
    </div>
  </div>
  <div
    className="table-transactions__header"
  >
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Is Paid?
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Date
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "20%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Name
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "20%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Category
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Value
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Action
      </div>
    </div>
  </div>
  <div
    className="table-transactions__body"
  >
    <table-transaction-list
      columns={
        Array [
          Object {
            "label": "Is Paid?",
            "name": "isPaid",
            "style": Object {
              "flexBasis": "15%",
            },
          },
          Object {
            "label": "Date",
            "name": "transactionDate",
            "style": Object {
              "flexBasis": "15%",
            },
          },
          Object {
            "label": "Name",
            "name": "name",
            "style": Object {
              "flexBasis": "20%",
            },
          },
          Object {
            "label": "Category",
            "name": "CategoryId",
            "style": Object {
              "flexBasis": "20%",
            },
          },
          Object {
            "label": "Value",
            "name": "value",
            "style": Object {
              "flexBasis": "15%",
            },
          },
          Object {
            "label": "Action",
            "name": "action",
            "style": Object {
              "flexBasis": "15%",
            },
          },
        ]
      }
      isLoading={false}
      list={
        Array [
          Object {
            "CategoryId": 1,
            "id": 99,
            "name": "Name",
            "transactionDate": "2018-08-01 20:80",
            "type": "in",
            "value": "10.00",
          },
        ]
      }
    />
    <div
      className="table-transactions__action"
    >
      <button
        className="button-rounded"
        disabled={false}
        type="button"
      >
        Add Transaction
      </button>
    </div>
  </div>
  <div
    className="table-transactions__footer"
  >
    <div
      className="table-transactions__labels"
    >
      <div
        className="table-transactions__label"
      >
        All Outs
      </div>
      <div
        className="table-transactions__label"
      >
        All In
      </div>
      <div
        className="table-transactions__label"
      >
        Total
      </div>
    </div>
    <div
      className="table-transactions__values"
    >
      <div
        className="table-transactions__value"
      >
        $10.00
      </div>
      <div
        className="table-transactions__value"
      >
        $20.00
      </div>
      <div
        className="table-transactions__value"
      >
        $30.00
      </div>
    </div>
  </div>
</div>
`;

exports[`TableTransactions should render with any one transaction entity 1`] = `
<div
  className="table-transactions"
>
  <div
    className="table-transactions__tabs"
  >
    <div
      className="tab-in-out"
    >
      <button
        className="tab-in-out__tab tab-in-out__tab--in-actived"
        id="tab-in"
        onClick={[Function]}
        type="button"
      >
        In
      </button>
      <button
        className="tab-in-out__tab"
        id="tab-out"
        onClick={[Function]}
        type="button"
      >
        Out
      </button>
    </div>
    <div
      className="tab-months"
    >
      <button
        className="tab-months__navigation"
        onClick={[Function]}
        type="button"
      >
        December 18
      </button>
      <span
        className="tab-months__current"
      >
        January 19
      </span>
      <button
        className="tab-months__navigation"
        onClick={[Function]}
        type="button"
      >
        February 19
      </button>
    </div>
  </div>
  <div
    className="table-transactions__header"
  >
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Is Paid?
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Date
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "20%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Name
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "20%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Category
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Value
      </div>
    </div>
    <div
      className="table-transactions__header-col"
      style={
        Object {
          "flexBasis": "15%",
        }
      }
    >
      <div
        className="table-transactions__header-col-inner"
      >
        Action
      </div>
    </div>
  </div>
  <div
    className="table-transactions__body"
  >
    <table-transaction-list
      columns={
        Array [
          Object {
            "label": "Is Paid?",
            "name": "isPaid",
            "style": Object {
              "flexBasis": "15%",
            },
          },
          Object {
            "label": "Date",
            "name": "transactionDate",
            "style": Object {
              "flexBasis": "15%",
            },
          },
          Object {
            "label": "Name",
            "name": "name",
            "style": Object {
              "flexBasis": "20%",
            },
          },
          Object {
            "label": "Category",
            "name": "CategoryId",
            "style": Object {
              "flexBasis": "20%",
            },
          },
          Object {
            "label": "Value",
            "name": "value",
            "style": Object {
              "flexBasis": "15%",
            },
          },
          Object {
            "label": "Action",
            "name": "action",
            "style": Object {
              "flexBasis": "15%",
            },
          },
        ]
      }
      isLoading={false}
      list={Array []}
    />
    <div
      className="table-transactions__action"
    >
      <button
        className="button-rounded"
        disabled={false}
        type="button"
      >
        Add Transaction
      </button>
    </div>
  </div>
</div>
`;
